--- a/src/app/features/modpack/modpack-builds-dev/modpack-builds-dev.component.scss
+++ b/src/app/features/modpack/modpack-builds-dev/modpack-builds-dev.component.scss
@@ -83,7 +83,6 @@
 
                 .mat-mdc-raised-button {
                     margin-left: 5px;
-                    height: fit-content;
                     align-self: center;
                 }
             }
