--- a/src/app/features/modpack/modpack-workshop/modpack-workshop.component.scss
+++ b/src/app/features/modpack/modpack-workshop/modpack-workshop.component.scss
@@ -14,7 +14,6 @@
 
         .mat-mdc-raised-button {
             margin-left: 5px;
-            height: fit-content;
             align-self: center;
         }
     }
