--- a/src/app/shared/components/elements/paginator/paginator.component.scss
+++ b/src/app/shared/components/elements/paginator/paginator.component.scss
@@ -11,14 +11,15 @@
         padding: 0;
         border-radius: 18px;
         min-width: 36px;
+        width: 36px;
         height: 36px;
 
         .mat-icon {
-            display: block;
-            height: 36px;
-            width: 36px;
-            line-height: 36px;
-            font-size: 30px;
+            font-size: 30px !important;
+            width: 30px !important;
+            height: 30px !important;
+            line-height: 30px !important;
+            margin: 0;
         }
     }
     /* TODO(mdc-migration): The following rule targets internal classes of select that may no longer apply for the MDC version. */
